@@ -45,6 +45,7 @@ private:
 	void ParseLine();
 	void UpdateTempSensor(const unsigned char Idx, const float Temp, const std::string &defaultname);
 	void UpdateSetPointSensor(const unsigned char Idx, const float Temp, const std::string &defaultname);
+	void UpdateSwitch(const unsigned char Idx, const bool bOn, const std::string &defaultname);
 	bool GetOutsideTemperatureFromDomoticz(float &tvalue);
 	static const int readBufferSize=1028;
 	unsigned char m_buffer[readBufferSize];
