@@ -25,6 +25,7 @@ private:
 protected:
 	std::string m_szIPAddress;
 	unsigned short m_usIPPort;
+	bool m_bDoRestart;
 
 	void Do_Work();
 	void OnConnect();
