@@ -12,6 +12,7 @@ public:
 private:
 	void SendMeter(const unsigned char ID1,const unsigned char ID2, const double musage, const double mtotal, const std::string &defaultname);
 	bool GetMeter(const unsigned char ID1,const unsigned char ID2, double &musage, double &mtotal);
+	void SendTempSensor(const unsigned char Idx, const float Temp, const std::string &defaultname);
 	void SendVoltage(const unsigned long Idx, const float Volt, const std::string &defaultname);
 	void SendPercentage(const unsigned long Idx, const float Percentage, const std::string &defaultname);
 
